<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GraphActivity"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/network_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_info" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/total_power"
        android:text="@string/total_power_default"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/grid_guideline_one_third" />

    <android.support.constraint.Guideline
        android:id="@+id/grid_guideline_one_third"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:id="@+id/monthly_power"
        android:text="@string/power_this_month_default"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toStartOf="@id/grid_guideline_two_thirds"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/grid_guideline_one_third"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/grid_guideline_two_thirds"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <TextView
        android:id="@+id/today_power"
        android:text="@string/power_today_default"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintStart_toEndOf="@id/grid_guideline_two_thirds"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp" />
</android.support.constraint.ConstraintLayout>
